Add multithreading examples: MonitorLock, ThreadExecutorPool, and enhance RandomizedSet methods